#1 Alignment of contents on SideBar Component (initial)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,13 @@
-<router-outlet></router-outlet>
+<div class="container-fluid overflow-auto">
+  <div class="row no-gutters">
+    <div class="col-3">
+      <app-side-bar></app-side-bar>
+    </div>
+    <div class="col-5">
+      Main Content
+    </div>
+    <div class="col-4">
+      Trending
+    </div>
+  </div>
+</div>
