#1 Added Fontawesome icon library updated the style of sideBar(part2)

--- a/src/app/shared/components/side-bar/side-bar.component.scss
+++ b/src/app/shared/components/side-bar/side-bar.component.scss
@@ -2,3 +2,19 @@
   width: 100%;
   height: 100vh !important;
 }
+
+.sideBar {
+
+  &-menu {
+
+    &__btn {
+      display: inline-block;
+      background-color: aqua;
+      // width: 120px;
+      // max-width: 135px;
+      cursor: pointer;
+      padding: 10px 16px;
+      border-radius: 25px;
+    }
+  }
+}
