--- a/src/app/shared/components/side-bar/side-bar.component.scss
+++ b/src/app/shared/components/side-bar/side-bar.component.scss
@@ -1,3 +1,5 @@
+@import 'src/styles';
+
 .sideBar {
   width: 100%;
   height: 100vh !important;
@@ -9,12 +11,24 @@
 
     &__btn {
       display: inline-block;
-      background-color: aqua;
-      // width: 120px;
-      // max-width: 135px;
       cursor: pointer;
-      padding: 10px 16px;
+      padding: 0.7rem 1rem;
       border-radius: 25px;
+      font-weight: 600;
+      transition: all 0.3s;
+
+      &:hover, &:active, &:visited {
+        color: $skyBlue-200;
+        background-color: $skyBlue-100;
+      }
     }
   }
+
+  &-button {
+    button {
+      border-radius: 25px;
+      padding: 0.7rem 4rem;
+    }
+  }
+
 }
