#1 Left Side Bar responsive design for mobile device

--- a/src/app/shared/components/side-bar/side-bar.component.html
+++ b/src/app/shared/components/side-bar/side-bar.component.html
@@ -1,61 +1,78 @@
 <div class="sideBar d-flex flex-column">
-  <div class="sideBar-menu mt-3 ml-3">
+  <div class="sideBar-menu mt-md-2 ml-3 mt-sm-0">
     <span class="sideBar-menu__btn">
       <fa-icon [icon]="faKiwiBird" size="lg"></fa-icon>
     </span>
   </div>
+  <!-- end of .sideBar-menu -->
   <div class="sideBar-menu mt-1 ml-3">
     <span class="sideBar-menu__btn">
       <fa-icon [icon]="faHome" size="lg"></fa-icon>
-      <span class="ml-3">Home</span>
+      <span class="ml-3 d-none d-lg-inline-block d-xl-inline-block">Home</span>
     </span>
   </div>
+  <!-- end of .sideBar-menu -->
   <div class="sideBar-menu mt-1 ml-3">
     <span class="sideBar-menu__btn">
       <fa-icon [icon]="faHashtag" size="lg"></fa-icon>
-      <span class="ml-4">Explore</span>
+      <span class="ml-4 d-none d-lg-inline-block d-xl-inline-block">Explore</span>
     </span>
   </div>
+  <!-- end of .sideBar-menu -->
   <div class="sideBar-menu mt-1 ml-3">
     <span class="sideBar-menu__btn">
       <fa-icon [icon]="faBell" size="lg"></fa-icon>
-      <span class="ml-4">Notifications</span>
+      <span class="ml-4 d-none d-lg-inline-block d-xl-inline-block">Notifications</span>
     </span>
   </div>
+  <!-- end of .sideBar-menu -->
   <div class="sideBar-menu mt-1 ml-3">
     <span class="sideBar-menu__btn">
       <fa-icon [icon]="faEnvelope" size="lg"></fa-icon>
-      <span class="ml-4">Messages</span>
+      <span class="ml-4 d-none d-lg-inline-block d-xl-inline-block">Messages</span>
     </span>
   </div>
+  <!-- end of .sideBar-menu -->
   <div class="sideBar-menu mt-1 ml-3">
     <span class="sideBar-menu__btn">
       <fa-icon [icon]="faBookmark" size="lg"></fa-icon>
-      <span class="ml-4">Bookmarks</span>
+      <span class="ml-4 d-none d-lg-inline-block d-xl-inline-block">Bookmarks</span>
     </span>
   </div>
+  <!-- end of .sideBar-menu -->
   <div class="sideBar-menu mt-1 ml-3">
     <span class="sideBar-menu__btn">
       <fa-icon [icon]="faList" size="lg"></fa-icon>
-      <span class="ml-4">Lists</span>
+      <span class="ml-4 d-none d-lg-inline-block d-xl-inline-block">Lists</span>
     </span>
   </div>
+  <!-- end of .sideBar-menu -->
   <div class="sideBar-menu mt-1 ml-3">
     <span class="sideBar-menu__btn">
       <fa-icon [icon]="faUser" size="lg"></fa-icon>
-      <span class="ml-4">Profile</span>
+      <span class="ml-4 d-none d-lg-inline-block d-xl-inline-block">Profile</span>
     </span>
   </div>
+  <!-- end of .sideBar-menu -->
   <div class="sideBar-menu mt-1 ml-3">
     <span class="sideBar-menu__btn">
       <fa-icon [icon]="faEllipsisH" size="lg"></fa-icon>
-      <span class="ml-4">More</span>
+      <span class="ml-4 d-none d-lg-inline-block d-xl-inline-block">More</span>
     </span>
   </div>
-  <div class="sideBar-button m-3 mb-auto">
+  <!-- end of .sideBar-menu -->
+  <div class="sideBar-menu mt-1 ml-3 d-block d-xl-none d-lg-none">
+    <span class="sideBar-menu__btn">
+      <fa-icon [icon]="faPencilAlt" size="lg"></fa-icon>
+    </span>
+  </div>
+  <!-- end of .sideBar-menu -->
+  <div class="sideBar-button m-3 mb-auto d-none d-xl-block d-lg-block">
     <button class="btn btn-info">Tweet</button>
   </div>
+  <!-- end of .sideBar-button  -->
   <div class="sideBar-info m-3">
     <span>Earl Hans Pelin Genoso</span>
   </div>
+  <!-- end of .sideBar-info  -->
 </div>
