--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid overflow-auto">
   <div class="row no-gutters">
-    <div class="col-3">
+    <div class="col-3 col-sm-2">
       <app-side-bar></app-side-bar>
     </div>
     <div class="col-5">
       Main Content
     </div>
-    <div class="col-4">
+    <div class="col-4 d-none d-lg-block d-xl-block">
       Trending
     </div>
   </div>
