--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,10 @@
     <div class="col-3 col-sm-2">
       <app-side-bar></app-side-bar>
     </div>
-    <div class="col-5">
-      Main Content
+    <div class="col-6 border">
+      <router-outlet></router-outlet>
     </div>
-    <div class="col-4 d-none d-lg-block d-xl-block">
+    <div class="col-3 d-none d-lg-block d-xl-block">
       Trending
     </div>
   </div>
