--- a/src/app/dashboard/containers/home/home.component.html
+++ b/src/app/dashboard/containers/home/home.component.html
@@ -1,1 +1,10 @@
-<h1>Home</h1>
+<div class="container">
+  <div class="home d-flex pt-2">
+    <span class="home-header h5 mr-auto">
+      Home
+    </span>
+    <span class="home-icon">
+      <fa-icon [icon]="faStar" size="md"></fa-icon>
+    </span>
+  </div>
+</div>
