#2 Design for Post form in Home Page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid overflow-auto">
   <div class="row no-gutters">
-    <div class="col-3 col-sm-2">
+    <div class="col-2 col-md-2">
       <app-side-bar></app-side-bar>
     </div>
-    <div class="col-6 border">
+    <div class="col-10 col-md-6 border">
       <router-outlet></router-outlet>
     </div>
-    <div class="col-3 d-none d-lg-block d-xl-block">
+    <div class="col-3 d-none d-lg-block d-xl-block d-md-block">
       Trending
     </div>
   </div>
