--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
     <div class="col-10 col-md-6 border">
       <router-outlet></router-outlet>
     </div>
-    <div class="col-3 d-none d-lg-block d-xl-block d-md-block">
-      Trending
+    <div class="col-4 d-none d-lg-block d-xl-block d-md-block">
+      <app-right-side-bar></app-right-side-bar>
     </div>
   </div>
 </div>
